2005-01-15  Maurizio Paolini <paolini@dmf.unicatt.it>

	* new PolygonBNPType corresponding to a polygon with a
	generic number of vertices.  It is constructed by selecting
	the vertices and ending up selecting the first vertex again.

	* the new ObjectConstructor::isAlreadySelectedOK method is a
	technical addition, it returns false for all normal objects
	(meaning that duplicated arguments are not acceptable). This
	is introduced in order to implement the construction of
	polygons "a la Drgeo".

2005-01-12  Pino Toscano <toscano.pino@tiscali.it>

	* Created a new KigPainter::drawArea() to draw and fill closed
	areas. This new functions differs from drawPolygon, because the
	old one is used to draw only polygons, while the new one is used
	to draw all the other closed and filled areases.

	* Adapted our CoordinateSystem's to use the new drawArea to draw
	the axis arrows.

2005-01-09  Maurizio Paolini <paolini@dmf.unicatt.it>

	* new action to construct the vertices of a polygon

	* new action to construct a generic triangle (as a polygon) given
	its vertices

2004-12-28  Maurizio Paolini <paolini@dmf.unicatt.it>

	* polygons are filled; no boundary drawn

	* fixed a problem when trasforming a segment with
	a projective (nonaffine) transformation; in certain
	cases the result is invalid (no longer a segment)

	* fixed a bug in similitude transformation as suggested by 
	Pino Toscano (#85171)

2004-12-27  Pino Toscano <toscano.pino@tiscali.it>

	* Fix bug #95637: Scrolling does not work during construction of
	a new object

2004-12-24  Pino Toscano <toscano.pino@tiscali.it>

	* Kig can now save and open compressed files with extension
	.kigz. This format is a gzip compressed tarball.

2004-12-14  Pino Toscano <toscano.pino@tiscali.it>

	* More tooltips and "what's this" to some dialog.

	* No more file name in every file.

	* More control on macro name: when loading from file, if a macro
	has no name, we'll assign it a bogus one (like "Unnamed macro